Clarify dataframe and encoding package, move diagrams to docs/